# claude-slack-sessions

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: allowlist.rs  credentials.rs  delete.rs  main.rs  projects.rs  service.rs  sessions.rs  status.rs
cli/templates/: slack-app-manifest.yaml
commands/: allow.md  delete.md  install.md  logs.md  manifest.md  project.md  restart.md  sessions.md  setup.md  start.md  status.md  stop.md  uninstall.md
daemon/: Cargo.toml
daemon/src/: claude.rs  config.rs  credentials.rs  discovery.rs  main.rs  mrkdwn.rs  projects.rs  session.rs
plugins/slack-sessions/.claude-plugin/: plugin.json
