[package]
name = "slack-sessions-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "slack-sessions"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
rpassword = "7"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
dirs = "5"
