[package]
name = "slack-sessionsd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "slack-sessionsd"
path = "src/main.rs"

[dependencies]
slack-morphism = { version = "2.20", features = ["hyper"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "io-util", "fs", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
